--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.11.0",
+    "nodemailer": "^6.4.10",
     "socket.io": "^1.3.2"
   },
   "start": "node server.js"
